@@ -4,7 +4,8 @@
 * NU-CMD: Developed a minimalist command-line version of NU (WIP).
 * NU-CMD: Added new command-line arguments -f file, -h host, -help
 * Fixed some project property entries (changed target Java version back to 1.7).
-* Adding support for ToutBox.fr
+* Added ToutBox.fr (account only).
+* Made small changes to the ToutBox.fr plugin.
 
 ==== v 3.4.0 ====
 * Updated Uploaded.net (now generates descriptive links instead of the short ul.to links).
